tut/4tue/a.txt
test.c: In function ‘main’:
test.c:5:5: error: expected expression before ‘return’
     return 0;
     ^
